# mcp-client

./: README.md  pyproject.toml  pytest.ini
mcpclient/: __init__.py  mcpclient.py
tests/: test_mcpserver.py
